--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^5.3.0",
     "flash": "^1.1.0",
     "jsonwebtoken": "^8.4.0",
+    "localtoken": "^0.1.2",
     "md5": "^2.2.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.13",
