fix(correcoes): rotas e formatacoes

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/server.js"
+    "start": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
