--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "flash": "^1.1.0",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.4.0",
     "localtoken": "^0.1.2",
     "md5": "^2.2.1",
